--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-
+  <link rel="stylesheet" type="text/css" href="styles.css"
 </head>
 <body>
-  <header>
-    <h1 id="store-name"> Pet Store </h1>
+  <header id="store-name">
+    <h1> Pet Store </h1>
   </header>
   <div id="all-pets">
     <div class="pet-profile">
@@ -33,7 +33,8 @@
     
     <div class="pet-profile">
       <h2> Chinchilla</h2>
-      <img src="https://upload.wikimedia.org/wikipedia/commons/5/5f/Standardchinchilla.jpg"
+      <img src="https://upload.wikimedia.org/wikipedia/commons/5/5f/Standardchinchilla.jpg">
+      <br/>
       <p> Very skittish. Must be handled carefully. </p>
       
     </div>
@@ -42,11 +43,9 @@
     <h2> Turtle </h2>
     <img src="https://i.ytimg.com/vi/p4Jj9QZFJvw/hqdefault.jpg">
     <p> Likes to eat fruits and vegetables. Lives long. </p>
-
-
-
-
     </div>
+  
   </div>
+
 </body>
 </html>
